[gd_scene load_steps=16 format=3 uid="uid://dajayqy7ycoxw"]

[ext_resource type="Script" path="res://objects/guns/gun/gun.gd" id="1_dm84q"]
[ext_resource type="Texture2D" uid="uid://ej3thgdt0ekr" path="res://assets/gun/pistol/pistol.svg" id="4_5gpee"]
[ext_resource type="PackedScene" uid="uid://bce27nip2odea" path="res://objects/bullets/bullet/bullet.tscn" id="4_v3eey"]
[ext_resource type="Script" path="res://classes/objects/PackedSceneSupplier/SinglePackedSceneSupplier.gd" id="5_25q3x"]
[ext_resource type="Script" path="res://classes/objects/Stats/StatRangeInt.gd" id="6_07aa3"]
[ext_resource type="AudioStream" uid="uid://5duh0ds7hwqy" path="res://assets/gun/pistol/pistol-shoot.wav" id="6_b1p1b"]

[sub_resource type="Resource" id="Resource_vughb"]
script = ExtResource("5_25q3x")
scene = ExtResource("4_v3eey")

[sub_resource type="Curve" id="Curve_eigvx"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_fjsn3"]
offsets = PackedFloat32Array(0.58, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_msh5n"]
offsets = PackedFloat32Array(0.72, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hashf"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_b1p1b")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_s2lsq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8wtaj"]
resource_name = "reload"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_xsy5e"]
resource_name = "shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(-2, 0.25, 1),
"update": 0,
"values": [0.0, -0.785398, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6g1y1"]
_data = {
"RESET": SubResource("Animation_s2lsq"),
"reload": SubResource("Animation_8wtaj"),
"shoot": SubResource("Animation_xsy5e")
}

[node name="Gun" type="Node2D"]
script = ExtResource("1_dm84q")
spread = 5.0
supplier = SubResource("Resource_vughb")

[node name="Ammo" type="Node" parent="."]
script = ExtResource("6_07aa3")
max_value = 3
value = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_5gpee")

[node name="Handle" type="Marker2D" parent="Sprite2D"]
position = Vector2(-6, 2)

[node name="ReloadParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.4
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.2
emission_shape = 2
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 80.0
initial_velocity_max = 80.0
angular_velocity_min = 12.0
angular_velocity_max = 12.0
orbit_velocity_min = -1.2
orbit_velocity_max = 1.2
damping_min = 32.0
damping_max = 32.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_eigvx")
color = Color(1, 1, 0, 1)
color_ramp = SubResource("Gradient_fjsn3")

[node name="FireParticles" type="CPUParticles2D" parent="."]
position = Vector2(24.5, -2.25)
emitting = false
amount = 4
lifetime = 0.1
one_shot = true
lifetime_randomness = 0.2
local_coords = true
gravity = Vector2(0, 0)
initial_velocity_min = 32.0
initial_velocity_max = 32.0
angle_min = -90.0
angle_max = 90.0
color_ramp = SubResource("Gradient_msh5n")

[node name="FireAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_hashf")
volume_db = -5.0

[node name="SightArea" type="Area2D" parent="."]
position = Vector2(24.5, -2.25)
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SightArea"]
polygon = PackedVector2Array(50, 0, 150, -24, 150, 24)

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(24.5, -2.25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6g1y1")
}
